Remove chess-telegram module Bump gradle version to 7.2 Cleanup gradle files